--- a/templates/profile/index.html.twig
+++ b/templates/profile/index.html.twig
@@ -71,7 +71,7 @@
                 Are you sure you want to delete your account?
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
                 <button type="button" class="btn btn-danger" id="confirmDeleteAccountBtn">Delete</button>
             </div>
         </div>
