--- a/templates/project/_idea_comments_modal.html.twig
+++ b/templates/project/_idea_comments_modal.html.twig
@@ -1,7 +1,7 @@
 {% block modalBody %}
     <div class="modal-content">
         <div class="modal-header">
-            <h5 class="modal-title">{{ idea.title|capitalize }}</h5>
+            <h5 class="modal-title">{{ idea.title }}</h5>
             <div class="d-flex align-items-center ml-auto">
                 <button type="button" class="btn btn-outline-secondary btn-sm modalbox-edit-idea mr-3" id="editIdeaBtn" data-toggle="modal" data-target="#editIdeaModal" data-content-url="{{ path('idea_edit', {'id': idea.id}) }}">
                     <i class="bi bi-pencil-square"></i> Edit
@@ -18,16 +18,14 @@
             <div class="container">
                 <div class="row">
                     <div class="col">
-                        <p>{{ idea.description|capitalize }}</p>
-                        <div class="mt-3">
-                            <p><strong>Start Date:</strong> {{ idea.startDate|date('M d, Y') }} </p>
-                        </div>
+                        <p>{{ idea.description }}</p>
                         <div class="d-flex align-items-center">
-                            <img src="{{ idea.owner.avatar ?? asset('images/concerto.png') }}" alt="{{ idea.owner.username|title }}" class="rounded-circle mr-3" style="width: 50px; height: 50px;">
+                            <img src="{{ idea.owner.avatar ?? asset('images/concerto.png') }}" alt="{{ idea.owner.username|title }}" class="rounded-circle mr-2" style="width: 40px; height: 40px;">
                             <div>
-                                <strong class="mb-0">{{ idea.owner.username|title }}</strong>
-                                <small class="text-muted">Owner</small>
+                                <strong>{{ idea.owner.username|title }}</strong>
+                                <span class="text-muted ml-2">{{ idea.startDate|date('F j, Y, H:i') }}</span>
                             </div>
+                        </div>
                         </div>
                     </div>
                 </div>
@@ -41,13 +39,13 @@
                                 <div class="comment-header d-flex align-items-center">
                                     <img src="{{ comment.owner.avatar ?? asset('images/concerto.png') }}" alt="{{ comment.owner.username|title }}" class="rounded-circle mr-2" style="width: 40px; height: 40px;">
                                     <div>
-                                        <strong>{{ comment.owner.username|title }}</strong>
+                                        <strong>{{ comment.owner.username }}</strong>
                                         <span class="text-muted ml-2">{{ comment.postDate|date('F j, Y, H:i') }}</span>
                                     </div>
                                 </div>
                                 <p>{{ comment.content }}</p>
                                 <div class="d-flex align-items-center">
-                                    <a href="#" class="reply-link text-primary mr-3" data-parent="{{ comment.id }}" data-parent-owner="{{ comment.owner.username|title }}">
+                                    <a href="#" class="reply-link text-primary mr-3" data-parent="{{ comment.id }}" data-parent-owner="{{ comment.owner.username }}">
                                         Reply
                                     </a>
                                     {% if comment.childComments is not empty %}
