--- a/templates/project/view.html.twig
+++ b/templates/project/view.html.twig
@@ -10,7 +10,7 @@
                     <div class="card mb-4 border-left-{{ status }} card-column" data-status="{{status}}" data-url="{{path('update_idea_status')}}">
                         <div class="card-header d-flex justify-content-between align-items-center">
                             <h4 class="card-title">{{ status_label|capitalize }}</h4>
-                            <a href="#" class="modalbox btn btn-secondary btn-sm"
+                            <a href="#" class="modalbox btn btn-primary btn-sm"
                                 data-toggle="modal"
                                 data-target="#ideaModal"
                                 data-content-url="{{ path('project_add_idea', {'status': status, 'id': project.id}) }}">
