Refactored app.js + hide shared projects on open

--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -146,7 +146,7 @@
                             <i class="bi bi-chevron-up"></i>
                         </span>
                     </h3>
-                    <div class="collapse show" id="sharedProjects">
+                    <div class="collapse" id="sharedProjects">
                         <div class="row">
                             {% if collabs is empty %}
                                 <div class="col">
