--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>{% block title %}Project View{% endblock %}</title>
+    <title>Concerto - {% block title %}Project View{% endblock %}</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="{{ asset('css/styles.css') }}">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
@@ -16,85 +16,66 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light align-items-center">
-        <a class="navbar-brand" href="#">
-            <img src="{{ asset('images/concerto.png') }}" alt="Logo" width="30" height="30" class="d-inline-block align-text-top">
-        </a>
+    
+    {% include 'components/_navbar.html.twig' %}
 
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ path('dashboard') }}">
-                        Concerto
-                    </a>
-                </li>
-                {% if app.user %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path('dashboard') }}">
-                            <i class="bi bi-speedometer2 mr-1"></i> Dashboard
-                        </a>
-                    </li>
-                {% endif %}
-            </ul>
-            {% if app.user %}
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                {% if (app.user.avatar) %}
-                                    <img src="{{ app.user.avatar }}" class="img-fluid rounded-circle nav-profile-picture" alt="Profile Picture">
-                                {% else %}
-                                    <i class="bi bi-person-circle"></i> 
-                            {% endif %}
-
-                            {{ app.user.firstName and app.user.lastName ? (app.user.firstName ~ ' ' ~ app.user.lastName)|title : app.user.username|title }}
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="{{ path('profile') }}">Profile</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="{{ path('app_logout') }}">
-                                Logout <i class="bi bi-box-arrow-right ml-1"></i>
-                            </a>
-                        </div>
-                    </li>
-                </ul>
-            {% else %}
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path('dashboard') }}">
-                            Login <i class="bi bi-box-arrow-in-right ml-1"></i>
-                        </a>
-                    </li>
-                </ul>
-            {% endif %}
-        </div>
-    </nav>
     <div class="container mt-5">
         {% block body %}
         
         {% endblock %}
     </div>
+
+    {% include 'components/_footer.html.twig' %}
+
+    
+    <style>
+        html, body {
+            height: 100%;
+        }
+        body {
+            display: flex;
+            flex-direction: column;
+            background-image: url("{{ asset('images/background.png') }}");
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-attachment: fixed; /* Keep the background fixed on scroll */
+        }
+        .navbar-nav.ml-auto .dropdown-menu {
+            right: 0;
+            left: auto;
+            margin-top: 0.5rem; /* Adjust as needed */
+        }
+        .nav-profile-picture {
+            width: 30px;
+            height: 30px;
+            object-fit: cover;
+        }
+        .container {
+            flex-grow: 1;
+        }
+        .footer {
+            background-color: #343a40;
+            padding: 20px 0;
+            color: white;
+            text-align: center;
+            box-shadow: 0 -1px 6px rgba(0, 0, 0, .1);
+        }
+        .footer h5 {
+            margin-bottom: 1rem;
+            font-weight: bold;
+            color: #f8f9fa;
+        }
+        .footer p {
+            color: #adb5bd;
+        }
+        .footer a {
+            color: #ffc107;
+            text-decoration: none;
+        }
+        .footer a:hover {
+            color: #ffd700;
+            text-decoration: underline;
+        }
+    </style>
 </body>
-
-<style>
-    body {
-        background-image: url("{{ asset('images/background.png') }}");
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-attachment: fixed; /* Keep the background fixed on scroll */
-    }
-    .navbar-nav.ml-auto .dropdown-menu {
-        right: 0;
-        left: auto;
-        margin-top: 0.5rem; /* Adjust as needed */
-    }
-    .nav-profile-picture {
-        width: 30px;
-        height: 30px;
-        object-fit: cover;
-    }
-</style>
-
 </html>
