--- a/templates/bundles/TwigBundle/Exception/error500.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error500.html.twig
@@ -7,7 +7,7 @@
 <div class="container text-center mt-5">
     <h1 class="display-1 text-danger">500</h1>
     <p class="lead">Something went wrong on our end. Please try again later.</p>
-    <a href="{{ path('dashboard') }}" class="btn btn-danger btn-lg mt-4">
+    <a href="{{ path('home') }}" class="btn btn-danger btn-lg mt-4">
         <i class="bi bi-arrow-left"></i> Go Back to Home
     </a>
 </div>
