--- a/templates/components/_navbar.html.twig
+++ b/templates/components/_navbar.html.twig
@@ -16,7 +16,7 @@
                 {% if app.user %}
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('home') }}">
-                            <i class="bi bi-speedometer2 mr-1"></i> Home
+                            <i class="bi bi-house-door-fill mr-1"></i> Home
                         </a>
                     </li>
                 {% endif %}
