--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -103,8 +103,13 @@
                     <div class="collapse show" id="personalProjects">
                         <div class="row">
                             {% if projects is empty %}
-                                <div class="col">
-                                    <p class="text-muted">You don't have any personal projects yet.</p>
+                                <div class="col text-center py-5">
+                                    <div class="card shadow-sm">
+                                        <div class="card-body">
+                                            <h5 class="card-title">No Projects Yet</h5>
+                                            <p class="card-text">You haven't created any projects yet. Once you have created a project, you'll see the projects here.</p>
+                                        </div>
+                                    </div>
                                 </div>
                             {% else %}
                                 {% for project in projects %}
@@ -149,7 +154,7 @@
                     <div class="collapse show" id="sharedProjects">
                         <div class="row">
                             {% if collabs is empty %}
-                                 <div class="col text-center py-5">
+                                <div class="col text-center py-5">
                                     <div class="card shadow-sm">
                                         <div class="card-body">
                                             <h5 class="card-title">No Shared Projects Yet</h5>
