Added terms + update footer and mails

--- a/templates/components/_footer.html.twig
+++ b/templates/components/_footer.html.twig
@@ -14,7 +14,7 @@
                             <a href="{{ path('home') }}" class="text-white">Home</a>
                         </li>
                         <li>
-                            <a href="{{ path('home') }}" class="text-white">Contact Us</a>
+                            <a href="mailto:concerto@virgile.baisnee.fr" class="text-white">Contact Us</a>
                         </li>
                     </ul>
                 </div>
